# Neurodivergente-Backend

./: .pdm-python  README.md  pyproject.toml
src/: db.sqlite3
src/config/: router.py  settings.py  urls.py
src/core/Neurodivergente/: apps.py  tests.py
src/core/Neurodivergente/admin/: __init__.py  profile.py
src/core/Neurodivergente/migrations/: 0001_initial.py  0002_alter_profile_profile_picture.py  0003_alter_profile_profile_picture.py  0004_alter_profile_profile_picture.py  0005_alter_profile_profile_picture.py  0006_alter_profile_profile_picture.py  0007_alter_profile_profile_picture.py  0008_alter_profile_profile_picture.py  0009_alter_profile_profile_picture.py  0010_alter_profile_profile_picture.py  0011_alter_profile_profile_picture.py  0012_alter_profile_profile_picture.py  0013_alter_profile_profile_picture.py  0014_alter_profile_profile_picture.py  0015_alter_profile_profile_picture.py  0016_alter_profile_profile_picture.py  0017_alter_profile_profile_picture.py  0018_alter_profile_profile_picture.py  0019_alter_profile_profile_picture.py  0020_alter_profile_profile_picture.py
src/core/Neurodivergente/models/: __init__.py  followers.py  profile.py
src/core/Neurodivergente/serializers/: __init__.py  followers.py  login.py  profile.py  register.py
src/core/Neurodivergente/views/: __init__.py  followers.py  login.py  profile.py  register.py
src/core/tests/: login_testapi.py  register_testapi.py
